--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-+<!DOCTYPE html>
- +<html>
- +	<head>
- +		<title>Absenteer</title>
- +	</head>
- +
- +	<body>
- +
- +		<h1>ab·sent·eer /ˌæb.sənˈtɪər/   
-indicating a person who is concerned with not being present in a place, at an occasion, or as part of something </h1>
- +
- +
- +	</body>
- +</html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Justin Reichert GitHub Site</title>
+    </head>
+    <body>
+    	<h1>J.J.R.</h1>
+    	<p>This is my github.io homepage</p>
+    </body>
+</html>
