--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-  
-  <head>
-    absenteer
-  </head>
+	<head>
+		<title>Michael Musick Blog</title>
+	</head>
 
+	<body>
 
+		<h1>Michael Musick's Awesome Site</h1>
+
+		<p>I am so cool. You dont even know.</p>
+
+	</body>
 </html>
