--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Michael Musick Blog</title>
+		<title>ABSENTEER</title>
 	</head>
 
 	<body>
 
-		<h1>Michael Musick's Awesome Site</h1>
+		<h1>absenteer</h1>
 
-		<p>I am so cool. You dont even know.</p>
+		<p>WD341/CC191</p>
 
 	</body>
 </html>
