--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		
 		<br>
 		
-		<p><a href="https://bigwhitemoonpictures">Big White Moon Pictures</a></p>
+		<p><a href="https://bigwhitemoonpictures.com">Big White Moon Pictures</a></p>
 
 		<p>WD341/CC191</p>
 
