--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
 		<h1>a b s e n t e e r</h1>
 		
-		<br>
-		
 		<p><a href="https://bigwhitemoonpictures.com">Big White Moon Pictures</a></p>
+		<p><a href="https://absenteer.com">Blog</a></p>
 
 		<p>WD341/CC191</p>
 
