--- a/341/1-2/index.html
+++ b/341/1-2/index.html
@@ -7,19 +7,14 @@
     <DT>I will take the sun in my mouth</DT>
     <DT>and leap into the air</DT>
     <DD>Alive</DD>
-        <div align="center">
-  with closed eyes
-</div>
+    <DD>with closed eyes></DD>
  <DT>to dash against darkness</DT>   
  <DD>in the sleeping curves of my body</DD>
  <DT>Shall enter fingers of smooth mastery</DT>
  <DT>with chasteness of sea-girls</DT>
  <div align="center">
   Will i complete the mystery
-</div>
-<div align="center">
-  of my flesh
-</div>
+<DD>of my flesh</DD>
 <DT>I will rise</DT>
 <DD>After a thousand years</DD>
 <DT>lipping></DT>
