--- a/341/1-2/index.html
+++ b/341/1-2/index.html
@@ -7,13 +7,12 @@
     <DT>I will take the sun in my mouth</DT>
     <DT>and leap into the air</DT>
     <DD>Alive</DD>
-    <DD>with closed eyes></DD>
+    <DD>with closed eyes</DD>
  <DT>to dash against darkness</DT>   
  <DD>in the sleeping curves of my body</DD>
  <DT>Shall enter fingers of smooth mastery</DT>
  <DT>with chasteness of sea-girls</DT>
- <div align="center">
-  Will i complete the mystery
+ <DD>Will i complete the mystery</DD>
 <DD>of my flesh</DD>
 <DT>I will rise</DT>
 <DD>After a thousand years</DD>
