--- a/341/1-2/index.html
+++ b/341/1-2/index.html
@@ -16,6 +16,6 @@
 <DD>of my flesh</DD>
 <DT>I will rise</DT>
 <DD>After a thousand years</DD>
-<DT>lipping></DT>
+<DT>lipping</DT>
 <DT>flowers</DT>
 <DD>And set my teeth in the silver of the moon</DD>
