--- a/341/1-2/index.html
+++ b/341/1-2/index.html
@@ -19,4 +19,6 @@
 <DT>lipping</DT>
 <DT>flowers</DT>
 <DD>And set my teeth in the silver of the moon</DD>
+</blockquote>
+<br>
 <a href="http://hellopoetry.com/poem/1595/i-will-wade-out/">-E.E. Cummings</a>
