--- a/341/1-2/index.html
+++ b/341/1-2/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head><h1>I Will Wade It Out</h1></head>
+  <head><h1>I Will Wade Out</h1></head>
   <blockquote>
-    <DT>i will wade it out</DT>
+    <DT>i will wade out</DT>
     <DD>till my thighs are steeped in burning flowers</DD>
     <DT>I will take the sun in my mouth</DT>
     <DT>and leap into the air</DT>
