--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>ABSENTEER</title>
-	</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Reichert_Week_02</title>
+    <script src="libraries/p5.js" type="text/javascript"></script>
 
-	<body>
+    <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
-		<h1>a b s e n t e e r</h1>
-		
-		<p><a href="https://bigwhitemoonpictures.com">Big White Moon Pictures</a></p>
+    <script src="sketch.js" type="text/javascript"></script>
 
-		<p>WD341/CC191</p>
-
-	</body>
+    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+  </head>
+  <body>
+  </body>
 </html>
